--- a/aws_efa/Makefile
+++ b/aws_efa/Makefile
@@ -5,7 +5,8 @@
 XDP_TARGETS  := af_xdp_kern af_xdp_kern_efa
 USER_TARGETS := af_xdp_user af_xdp_user_efa
 CUDA_HOME:=/usr/local/cuda
-CXXFLAGS = -I /opt/amazon/efa/include -L /opt/amazon/efa/lib -I$(CUDA_HOME)/include -L ${CUDA_HOME}/lib64 -lfabric -libverbs -lefa -lcudart -lpthread -lcuda -arch=sm_80
+CXXFLAGS = -I /opt/amazon/efa/include -L /opt/amazon/efa/lib -I$(CUDA_HOME)/include -L ${CUDA_HOME}/lib64 -lfabric -libverbs -lefa -lcudart -lpthread -lcuda
+CUFLAGS = ${CXXFLAGS} -arch=sm_80
 
 all: fi efa cuda
 
@@ -39,6 +40,9 @@ efa_shared_cp_ibverbs: efa_shared_cp_ibverbs.cc
 efa_sge_mr: efa_sge_mr.cc
 	g++ -O3 -g efa_sge_mr.cc -o efa_sge_mr $(CXXFLAGS)
 
+efa_rdma_write: efa_rdma_write.cc
+	g++ -O3 -g efa_rdma_write.cc -o efa_rdma_write $(CXXFLAGS)
+
 efa_load_latency: efa_load_latency.cc
 	g++ -O3 -g efa_load_latency.cc -o efa_load_latency $(CXXFLAGS)
 
@@ -46,25 +50,25 @@ CUDA_BIN = cuda_event cuda_memcpy cuda_memcpy_async cuda_persist_kernel cuda_mem
 cuda: $(CUDA_BIN)
 
 cuda_event: cuda_event.cu
-	nvcc -O3 -g cuda_event.cu -o cuda_event $(CXXFLAGS) -std=c++17
+	nvcc -O3 -g cuda_event.cu -o cuda_event $(CUFLAGS) -std=c++17
 
 cuda_memcpy: cuda_memcpy.cu
-	nvcc -O3 -g cuda_memcpy.cu -o cuda_memcpy $(CXXFLAGS) -std=c++17
+	nvcc -O3 -g cuda_memcpy.cu -o cuda_memcpy $(CUFLAGS) -std=c++17
 
 cuda_memcpy_async: cuda_memcpy_async.cu
-	nvcc -O3 -g cuda_memcpy_async.cu -o cuda_memcpy_async $(CXXFLAGS) -std=c++17
+	nvcc -O3 -g cuda_memcpy_async.cu -o cuda_memcpy_async $(CUFLAGS) -std=c++17
 
 cuda_persist_kernel: cuda_persist_kernel.cu
-	nvcc -O3 -g cuda_persist_kernel.cu -o cuda_persist_kernel $(CXXFLAGS) -std=c++17
+	nvcc -O3 -g cuda_persist_kernel.cu -o cuda_persist_kernel $(CUFLAGS) -std=c++17
 
 cuda_memcpy_gpu: cuda_memcpy_gpu.cu
-	nvcc -O3 -g cuda_memcpy_gpu.cu -o cuda_memcpy_gpu $(CXXFLAGS) -std=c++17
+	nvcc -O3 -g cuda_memcpy_gpu.cu -o cuda_memcpy_gpu $(CUFLAGS) -std=c++17
 
 cuda_concurrent: cuda_concurrent.cu
-	nvcc -O3 -g cuda_concurrent.cu -o cuda_concurrent $(CXXFLAGS) -std=c++17
+	nvcc -O3 -g cuda_concurrent.cu -o cuda_concurrent $(CUFLAGS) -std=c++17
 
 cuda_greenctx: cuda_greenctx.cu
-	nvcc -O3 -g cuda_greenctx.cu -o cuda_greenctx $(CXXFLAGS) -std=c++17
+	nvcc -O3 -g cuda_greenctx.cu -o cuda_greenctx $(CUFLAGS) -std=c++17
 
 clean:
 	rm $(FI_BIN) $(EFA_BIN) $(CUDA_BIN)
