--- a/gpu_driven/Makefile
+++ b/gpu_driven/Makefile
@@ -9,9 +9,9 @@ EXT_SUFFIX        := $(shell $(PYTHON) -c "import sysconfig as s; print(s.get_co
 # GPU arch (override with: make SM=90)
 SM ?= 90
 
-CXXFLAGS  := -O3 -std=c++17 -Wall -pthread -fPIC
-LDFLAGS := -lpthread -libverbs -lnl-3 -lnl-route-3 -Xlinker -rpath -Xlinker $(CUDA_PATH)/lib64
-NVCCFLAGS := -O3 -std=c++17 -Xcompiler "-Wall -pthread -fPIC" -ccbin /usr/bin/g++
+CXXFLAGS  := -O3 -std=c++17 -Wall -pthread -fPIC -fvisibility=hidden
+LDFLAGS := -lpthread -lglog -libverbs -lnl-3 -lnl-route-3 -Xlinker -rpath -Xlinker $(CUDA_PATH)/lib64
+NVCCFLAGS := -O3 -std=c++17 -Xcompiler "-Wall -pthread -fPIC -fvisibility=hidden" -ccbin /usr/bin/g++
 
 INCLUDES := -Iinclude -I$(CUDA_PATH)/include -I/usr/include -I../include
 
@@ -23,7 +23,6 @@ SRC_REMOTE := bench/benchmark_remote.cu
 SRC_DUAL   := bench/benchmark_dual.cu
 
 PYBIND_SRC := src/pybind_proxy.cc
-
 OBJ_CPP := $(SRC_CPP:.cpp=.o)
 OBJ_CU  := $(SRC_CU:.cu=.o)
 
@@ -33,6 +32,10 @@ OBJ_DUAL   := $(OBJ_CPP) $(OBJ_CU) $(SRC_DUAL:.cu=.o)
 
 PYBIND_OBJ := $(PYBIND_SRC:.cc=.o)
 
+UCCL_EP_SRC := src/uccl_ep.cc
+UCCL_EP_OBJ := $(UCCL_EP_SRC:.cc=.o)
+UCCL_EP_EXT := uccl_ep$(EXT_SUFFIX)
+
 TARGET_LOCAL  := benchmark_local
 TARGET_REMOTE := benchmark_remote
 TARGET_DUAL   := benchmark_dual
@@ -40,7 +43,7 @@ PYTARGET      := gpu_driven$(EXT_SUFFIX)
 
 .PHONY: all py clean
 
-all: $(TARGET_LOCAL) $(TARGET_REMOTE) $(TARGET_DUAL) $(PYTARGET)
+all: $(TARGET_LOCAL) $(TARGET_REMOTE) $(TARGET_DUAL) $(PYTARGET) $(UCCL_EP_EXT)
 
 # C++ compilation rule with dependency generation
 %.o: %.cpp
@@ -69,7 +72,11 @@ $(PYTARGET): $(OBJ_CPP) $(OBJ_CU) src/pybind_proxy.o
 	$(NVCC) -arch=sm_$(SM) $(NVCCFLAGS) -shared -Xcompiler "-fPIC" \
 	  $(INCLUDES) $(PYBIND11_INCLUDES) $^ -lcuda -lcudart $(LDFLAGS) -o $@
 
-py: $(PYTARGET)
+$(UCCL_EP_EXT): $(UCCL_EP_OBJ)
+	$(CXX) $(CXXFLAGS) -shared -fPIC $(INCLUDES) $(PYBIND11_INCLUDES) \
+	-DHAVE_UCCL $^ -o $@
+
+py: $(PYTARGET) $(UCCL_EP_EXT)
 
 # Clean all generated files
 clean:
@@ -77,11 +84,11 @@ clean:
 	      $(SRC_LOCAL:.cu=.o) $(SRC_REMOTE:.cu=.o) $(SRC_DUAL:.cu=.o) \
 	      $(PYBIND_OBJ) \
 	      $(TARGET_LOCAL) $(TARGET_REMOTE) $(TARGET_DUAL) \
-	      $(PYTARGET) \
+	      $(PYTARGET) $(UCCL_EP_EXT) \
 	      *.d src/*.d bench/*.d
 
 # Automatically include dependency files if they exist
 DEPS := $(OBJ_CPP:.o=.d) $(OBJ_CU:.o=.d) \
         $(SRC_LOCAL:.cu=.d) $(SRC_REMOTE:.cu=.d) $(SRC_DUAL:.cu=.d) \
-        $(PYBIND_OBJ:.o=.d)
+        $(PYBIND_OBJ:.o=.d) $(UCCL_EP_OBJ:.o=.d)
 -include $(DEPS)
