Add Primus as a submodule in thirdparty

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "thirdparty/nccl-tests"]
 	path = thirdparty/nccl-tests
 	url = https://github.com/NVIDIA/nccl-tests.git
+[submodule "thirdparty/Primus"]
+	path = thirdparty/Primus
+	url = https://github.com/AMD-AIG-AIMA/Primus
