Add APIs for NIXL's UCCL backend (#186)
* Add CPP APIs for NIXL's UCCL backend

* Fix formatting

* Cleanup plugin

* Build only librdma

* Add metadata api

Signed-off-by: Pravein Govindan Kannan <pravein.govindan.kannan@ibm.com>

* Fix linker error when running nixl

* Fix formatting after merge

* Addtional coordination to start uccl_recv

* Provide boostrap fd to be used for future

* Revert conn_destroy

* Change endpoint statics

* Fix the API changes

* Fix errors after merge

* Residual fixes

* Change to async APIs

* Normalize pci bus id

* Add with_python

* Remove stray logs from merge

* Remove stray include

* Add multiple iteration support to benchmark with uccl

* Add coordination for read

* Fix error

* Remove redundant

* Add missed out commits after merge

* Remove WITH_PYTHON and stray print

* Remove unnecessary debugs

* Fix compile

* Fix gil release assertion and build issue

* Fix format

* Create librdma_plugin and use auto

---------

Signed-off-by: Pravein Govindan Kannan <pravein.govindan.kannan@ibm.com>
Co-authored-by: Yang Zhou <yangzhou.rpc@gmail.com>

--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -16,9 +16,12 @@ PYEXT           := $(shell $(PYTHON_CONFIG) --extension-suffix)
 PYBIND11_INCLUDES := $(shell $(PYTHON) -m pybind11 --includes)
 PYTHON_LDFLAGS := $(shell $(PYTHON_CONFIG) --ldflags)
 
-# Python installation path
+# Installation path
 PYTHON_SITE_PACKAGES := $(shell $(PYTHON) -c "import site; print(site.getsitepackages()[0])")
 INSTALL_DIR          := $(PYTHON_SITE_PACKAGES)/uccl
+PREFIX ?= /usr/local
+LIBDIR ?= $(PREFIX)/lib
+INCDIR ?= $(PREFIX)/include
 
 # Redis
 REDIS_PKGCONFIG := pkg-config
@@ -31,36 +34,51 @@ LDFLAGS         = -L$(CUDA_LIB) -lcudart -lcuda $(REDIS_LIBS) \
 
 # Target and source files
 TARGET   := p2p$(PYEXT)
+PLUGIN_SO := libuccl_engine.so
+CAPI_SOURCE := uccl_engine.cc
+CAPI_HEADER := uccl_engine.h
+CAPI_OBJECT := $(CAPI_SOURCE:.cc=.o)
 SOURCES := engine.cc pybind_engine.cc
+CORE_OBJECT := engine.o
 OBJECTS := $(SOURCES:.cc=.o)
 
 # Default target
-all: $(TARGET)
+all: $(TARGET) $(PLUGIN_SO)
 
-# Build the shared library
+# Build the shared libraries
 $(TARGET): $(OBJECTS) ../rdma/librdma.a
 	$(CXX) $(OBJECTS) ../rdma/librdma.a \
 	      -L$(CUDA_LIB) -lcudart -lcuda \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(CUDA_LIB)
 
+$(PLUGIN_SO): $(CAPI_OBJECT) $(CORE_OBJECT) ../rdma/librdma_plugin.a
+	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) ../rdma/librdma_plugin.a \
+	      -L$(CUDA_LIB) -lcudart -lcuda \
+	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
+	      -Wl,-rpath,$(CUDA_LIB)
 
-../rdma/librdma.a: ../rdma/*.cc ../rdma/*.h
-	make -C ../rdma -j$(nproc)
+
+../rdma/librdma.a: $(filter-out ../rdma/nccl_plugin.cc, $(wildcard ../rdma/*.cc)) ../rdma/*.h
+	make -C ../rdma librdma.a -j$(nproc)
+
+../rdma/librdma_plugin.a: $(filter-out ../rdma/nccl_plugin.cc, $(wildcard ../rdma/*.cc)) ../rdma/*.h
+	make CXXFLAGS="-DDISABLE_CALL_ONCE_STATIC" -C ../rdma librdma_plugin.a
 
 # Compile source files
 %.o: %.cc
 	$(CXX) $(CXXFLAGS) $(PYBIND11_INCLUDES) -c $< -o $@
 
 # Install the module
-install: $(TARGET)
+install: $(TARGET) $(PLUGIN_SO)
 	@mkdir -p $(INSTALL_DIR)
 	@cp $(TARGET) $(INSTALL_DIR)/
 	@echo "Installation complete. Module installed as: $(INSTALL_DIR)/$(TARGET)"
-
+	install -m 755 $(PLUGIN_SO) $(LIBDIR)/
+	install -m 644 $(CAPI_HEADER) $(INCDIR)/
 # Clean build artifacts
 clean:
-	rm -f $(OBJECTS) $(TARGET)
+	rm -f $(OBJECTS) $(CORE_OBJECT) $(CAPI_OBJECT) $(TARGET) $(PLUGIN_SO)
 	make -C ../rdma clean -j$(nproc)
 
 # Test the module
