Integration test `rsync` and `build_and_install` all. (#323)
* l4 integration test

* update conda path

* workload

* rsync and build and install all folders

* rename

* submodule

* only update nccl submodule

* recursive update

* uccl test

--- a/.github/workflows/remote-uccl-build.yml
+++ b/.github/workflows/remote-uccl-build.yml
@@ -41,6 +41,16 @@ jobs:
 
           ssh-keyscan -H 4.14.153.89 >> ~/.ssh/known_hosts
 
+      - name: Sync PR code to remote
+        shell: bash
+        run: |
+          set -euo pipefail
+          git submodule update --init --recursive thirdparty/nccl
+          rsync -az --delete \
+            -e "ssh -o BatchMode=yes" \
+            ./gpu_driven ./rdma ./p2p \
+            ./ l4-sky-test-01:/home/skytestuser/uccl-test/
+
       - name: Build & verify UCCL on remote
         shell: bash
         run: |
@@ -60,8 +70,8 @@ jobs:
             conda info --envs | awk \x27{print \$1}\x27 | grep -qx uccl || conda create -y -n uccl python=3.11
             conda activate uccl
 
-            cd /home/skytestuser/uccl
-            ./build_and_install.sh cuda gpudriven 3.11 2>&1 | tee build.log
+            cd /home/skytestuser/uccl-test
+            ./build_and_install.sh cuda all 3.11 2>&1 | tee build.log
 
             grep -q \"Successfully installed uccl-0.0.1.post4\" build.log
           "'
@@ -71,7 +81,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          scp -o BatchMode=yes l4-sky-test-01:/home/skytestuser/uccl/build.log ./build.log || true
+          scp -o BatchMode=yes l4-sky-test-01:/home/skytestuser/uccl-test/build.log ./build.log || true
 
       - name: Upload build.log artifact
         if: always()
